# Azazel-Deobfuscator

./: .gitignore  CMakeLists.txt  README.md
deobfuscation proofs/: FeLolitaGlitcher_deobf.luau
resources/: app.rc
src/: azazel_png.h  deobfuscator.cpp  deobfuscator.h  main.cpp  sandbox.cpp  sandbox.h
